added js, got the labels to interact with inputs

--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
       to help us improve our offering!
     </p>
     <form class="ratings">
-      <lable class="rating"><input type="radio" name="radio" value="1" /></lable>
-      <lable class="rating"><input type="radio" name="radio" />2</lable>
-      <lable class="rating"><input type="radio" name="radio" />3</lable>
-      <lable class="rating"><input type="radio" name="radio" />4</lable>
-      <lable class="rating"><input type="radio" name="radio" />5</lable>
+      <div class="rating-buttons">
+        <label class="rating-label" for="rating1">1</label>
+        <input type="radio" id="rating1" name="rating" value="rating1" />
+        <label class="rating-label" for="rating2">2</label>
+        <input type="radio" id="rating1" name="rating" value="rating2" />
+        <label class="rating-label" for="rating3">3</label>
+        <input type="radio" id="rating1" name="rating" value="rating3" />
+        <label class="rating-label" for="rating4">4</label>
+        <input type="radio" id="rating1" name="rating" value="rating4" />
+        <label class="rating-label" for="rating5">5</label>
+        <input type="radio" id="rating1" name="rating" value="rating5" />
+      </div>
     </form>
-    <button class="submit">Submit</button>
+    <button type="submit" class="submit">Submit</button>
   </div>
 
   <!-- Rating state end -->
