sorted out the page visibility

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <!-- Thank you state start -->
 
-  <div class="thanks-page card">
+  <div class="thanks-page card hidden">
     <img class="thanks-image" src="images/illustration-thank-you.svg" alt="a mobile phone with a receipt coming out of it and a credit card to the left">
     <div class="your-rating">You selected <!-- Add rating here --> out of 5</div>
     <h1 class="thanks-title">Thank you!</h1>
